--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "description": "React is a JavaScript library for building user interfaces.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "start": "node src/app.js",
     "dev": "nodemon"
   },
   "author": "yo",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.5.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4",
-    "ts-node": "^10.9.2"
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   },
   "dependencies": {
     "winston": "^3.14.2"
