--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "start": "node src/app.js",
+    "start": "node src/app.ts",
     "dev": "nodemon"
   },
   "author": "yo",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
+    "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.1",
     "jest": "^29.7.0",
